[package]
name = "nsfw_detector_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
ndarray = "0.16.1"
once_cell = "1.21.3"
prost = "0.13.5"
reqwest = { version = "0.12.15", features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tract-onnx = "0.21.13"
tracing-subscriber = "0.3.19"
ort = "1.16.3"

[build-dependencies]
tonic-build = "0.13.1"
